// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalCardLayout matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-card mdc-card--global-override material-design-card"
        style="border-radius: 4px;"
      >
        <div
          class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="mdc-card__media mdc-card__media--16-9 material-design-card__media material-design-card-with-text-under-media"
            style="background-image: url(http://test.loc/test.jpg);"
            tabindex="0"
          />
          <div
            class="material-design-card__primary"
          >
            <h2
              class="material-design-card__title title-large"
            >
              Test title
            </h2>
            <h3
              class="material-design-card__secondary-text body-medium"
            >
              Test secondary text
            </h3>
          </div>
          <div
            class="material-design-card__supporting-text material-design-card__supporting-text_text-under-media body-medium"
          >
            Test supporting text
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 1
              </span>
            </a>
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world-again"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 2
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override material-design-card"
      style="border-radius: 4px;"
    >
      <div
        class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="mdc-card__media mdc-card__media--16-9 material-design-card__media material-design-card-with-text-under-media"
          style="background-image: url(http://test.loc/test.jpg);"
          tabindex="0"
        />
        <div
          class="material-design-card__primary"
        >
          <h2
            class="material-design-card__title title-large"
          >
            Test title
          </h2>
          <h3
            class="material-design-card__secondary-text body-medium"
          >
            Test secondary text
          </h3>
        </div>
        <div
          class="material-design-card__supporting-text material-design-card__supporting-text_text-under-media body-medium"
        >
          Test supporting text
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 1
            </span>
          </a>
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world-again"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 2
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the action row should not be displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-card mdc-card--global-override material-design-card"
        style="border-radius: 4px;"
      >
        <div
          class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="mdc-card__media mdc-card__media--16-9 material-design-card__media material-design-card-with-text-under-media"
            style="background-image: url(http://test.loc/test.jpg);"
            tabindex="0"
          />
          <div
            class="material-design-card__primary"
          >
            <h2
              class="material-design-card__title title-large"
            >
              Test title
            </h2>
            <h3
              class="material-design-card__secondary-text body-medium"
            >
              Test secondary text
            </h3>
          </div>
          <div
            class="material-design-card__supporting-text material-design-card__supporting-text_text-under-media body-medium"
          >
            Test supporting text
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override material-design-card"
      style="border-radius: 4px;"
    >
      <div
        class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="mdc-card__media mdc-card__media--16-9 material-design-card__media material-design-card-with-text-under-media"
          style="background-image: url(http://test.loc/test.jpg);"
          tabindex="0"
        />
        <div
          class="material-design-card__primary"
        >
          <h2
            class="material-design-card__title title-large"
          >
            Test title
          </h2>
          <h3
            class="material-design-card__secondary-text body-medium"
          >
            Test secondary text
          </h3>
        </div>
        <div
          class="material-design-card__supporting-text material-design-card__supporting-text_text-under-media body-medium"
        >
          Test supporting text
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the content layout is text above media 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-card mdc-card--global-override material-design-card"
        style="border-radius: 4px;"
      >
        <div
          class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="material-design-card__primary"
          >
            <h2
              class="material-design-card__title title-large"
            >
              Test title
            </h2>
            <h3
              class="material-design-card__secondary-text body-medium"
            >
              Test secondary text
            </h3>
          </div>
          <div
            class="mdc-card__media mdc-card__media--16-9 material-design-card__media material-design-card-with-text-above-media"
            style="background-image: url(http://test.loc/test.jpg);"
            tabindex="0"
          />
          <div
            class="material-design-card__supporting-text material-design-card__supporting-text_text-above-media body-medium"
          >
            Test supporting text
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 1
              </span>
            </a>
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world-again"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 2
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override material-design-card"
      style="border-radius: 4px;"
    >
      <div
        class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="material-design-card__primary"
        >
          <h2
            class="material-design-card__title title-large"
          >
            Test title
          </h2>
          <h3
            class="material-design-card__secondary-text body-medium"
          >
            Test secondary text
          </h3>
        </div>
        <div
          class="mdc-card__media mdc-card__media--16-9 material-design-card__media material-design-card-with-text-above-media"
          style="background-image: url(http://test.loc/test.jpg);"
          tabindex="0"
        />
        <div
          class="material-design-card__supporting-text material-design-card__supporting-text_text-above-media body-medium"
        >
          Test supporting text
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 1
            </span>
          </a>
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world-again"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 2
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the content layout is text over media 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-card mdc-card--global-override material-design-card"
        style="border-radius: 4px;"
      >
        <div
          class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="mdc-card__media mdc-card__media--16-9 material-design-card__media material-design-card-with-text-over-media"
            style="background-image: url(http://test.loc/test.jpg);"
            tabindex="0"
          >
            <div
              class="mdc-card__media-content"
            >
              <div
                class="material-design-card__primary"
              >
                <h2
                  class="material-design-card__title title-large"
                >
                  Test title
                </h2>
                <h3
                  class="material-design-card__secondary-text body-medium"
                >
                  Test secondary text
                </h3>
              </div>
            </div>
          </div>
          <div
            class="material-design-card__supporting-text material-design-card__supporting-text_text-over-media body-medium"
          >
            Test supporting text
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 1
              </span>
            </a>
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world-again"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 2
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override material-design-card"
      style="border-radius: 4px;"
    >
      <div
        class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="mdc-card__media mdc-card__media--16-9 material-design-card__media material-design-card-with-text-over-media"
          style="background-image: url(http://test.loc/test.jpg);"
          tabindex="0"
        >
          <div
            class="mdc-card__media-content"
          >
            <div
              class="material-design-card__primary"
            >
              <h2
                class="material-design-card__title title-large"
              >
                Test title
              </h2>
              <h3
                class="material-design-card__secondary-text body-medium"
              >
                Test secondary text
              </h3>
            </div>
          </div>
        </div>
        <div
          class="material-design-card__supporting-text material-design-card__supporting-text_text-over-media body-medium"
        >
          Test supporting text
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 1
            </span>
          </a>
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world-again"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 2
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the content layout is text over media and the image should not be displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-card mdc-card--global-override material-design-card"
        style="border-radius: 4px;"
      >
        <div
          class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="material-design-card__primary"
          >
            <h2
              class="material-design-card__title title-large"
            >
              Test title
            </h2>
            <h3
              class="material-design-card__secondary-text body-medium"
            >
              Test secondary text
            </h3>
          </div>
          <div
            class="material-design-card__supporting-text material-design-card__supporting-text_text-over-media body-medium"
          >
            Test supporting text
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 1
              </span>
            </a>
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world-again"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 2
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override material-design-card"
      style="border-radius: 4px;"
    >
      <div
        class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="material-design-card__primary"
        >
          <h2
            class="material-design-card__title title-large"
          >
            Test title
          </h2>
          <h3
            class="material-design-card__secondary-text body-medium"
          >
            Test secondary text
          </h3>
        </div>
        <div
          class="material-design-card__supporting-text material-design-card__supporting-text_text-over-media body-medium"
        >
          Test supporting text
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 1
            </span>
          </a>
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world-again"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 2
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the content layout is text over media and the image source url is missing 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-card mdc-card--global-override material-design-card"
        style="border-radius: 4px;"
      >
        <div
          class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="material-design-card__primary"
          >
            <h2
              class="material-design-card__title title-large"
            >
              Test title
            </h2>
            <h3
              class="material-design-card__secondary-text body-medium"
            >
              Test secondary text
            </h3>
          </div>
          <div
            class="mdc-card__media mdc-card__media--16-9 material-design-card__media material-design-card-with-text-over-media"
            style="background-image: url();"
            tabindex="0"
          >
            <div
              class="mdc-card__media-content"
            >
              <div
                class="material-design-card__primary"
              >
                <h2
                  class="material-design-card__title title-large"
                >
                  Test title
                </h2>
                <h3
                  class="material-design-card__secondary-text body-medium"
                >
                  Test secondary text
                </h3>
              </div>
            </div>
          </div>
          <div
            class="material-design-card__supporting-text material-design-card__supporting-text_text-over-media body-medium"
          >
            Test supporting text
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 1
              </span>
            </a>
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world-again"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 2
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override material-design-card"
      style="border-radius: 4px;"
    >
      <div
        class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="material-design-card__primary"
        >
          <h2
            class="material-design-card__title title-large"
          >
            Test title
          </h2>
          <h3
            class="material-design-card__secondary-text body-medium"
          >
            Test secondary text
          </h3>
        </div>
        <div
          class="mdc-card__media mdc-card__media--16-9 material-design-card__media material-design-card-with-text-over-media"
          style="background-image: url();"
          tabindex="0"
        >
          <div
            class="mdc-card__media-content"
          >
            <div
              class="material-design-card__primary"
            >
              <h2
                class="material-design-card__title title-large"
              >
                Test title
              </h2>
              <h3
                class="material-design-card__secondary-text body-medium"
              >
                Test secondary text
              </h3>
            </div>
          </div>
        </div>
        <div
          class="material-design-card__supporting-text material-design-card__supporting-text_text-over-media body-medium"
        >
          Test supporting text
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 1
            </span>
          </a>
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world-again"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 2
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the corner radius is undefined 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-card mdc-card--global-override material-design-card"
      >
        <div
          class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="mdc-card__media mdc-card__media--16-9 material-design-card__media material-design-card-with-text-under-media"
            style="background-image: url(http://test.loc/test.jpg);"
            tabindex="0"
          />
          <div
            class="material-design-card__primary"
          >
            <h2
              class="material-design-card__title title-large"
            >
              Test title
            </h2>
            <h3
              class="material-design-card__secondary-text body-medium"
            >
              Test secondary text
            </h3>
          </div>
          <div
            class="material-design-card__supporting-text material-design-card__supporting-text_text-under-media body-medium"
          >
            Test supporting text
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 1
              </span>
            </a>
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world-again"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 2
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override material-design-card"
    >
      <div
        class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="mdc-card__media mdc-card__media--16-9 material-design-card__media material-design-card-with-text-under-media"
          style="background-image: url(http://test.loc/test.jpg);"
          tabindex="0"
        />
        <div
          class="material-design-card__primary"
        >
          <h2
            class="material-design-card__title title-large"
          >
            Test title
          </h2>
          <h3
            class="material-design-card__secondary-text body-medium"
          >
            Test secondary text
          </h3>
        </div>
        <div
          class="material-design-card__supporting-text material-design-card__supporting-text_text-under-media body-medium"
        >
          Test supporting text
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 1
            </span>
          </a>
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world-again"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 2
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the image should not be displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-card mdc-card--global-override material-design-card"
        style="border-radius: 4px;"
      >
        <div
          class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="material-design-card__primary"
          >
            <h2
              class="material-design-card__title title-large"
            >
              Test title
            </h2>
            <h3
              class="material-design-card__secondary-text body-medium"
            >
              Test secondary text
            </h3>
          </div>
          <div
            class="material-design-card__supporting-text material-design-card__supporting-text_text-under-media body-medium"
          >
            Test supporting text
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 1
              </span>
            </a>
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world-again"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 2
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override material-design-card"
      style="border-radius: 4px;"
    >
      <div
        class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="material-design-card__primary"
        >
          <h2
            class="material-design-card__title title-large"
          >
            Test title
          </h2>
          <h3
            class="material-design-card__secondary-text body-medium"
          >
            Test secondary text
          </h3>
        </div>
        <div
          class="material-design-card__supporting-text material-design-card__supporting-text_text-under-media body-medium"
        >
          Test supporting text
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 1
            </span>
          </a>
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world-again"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 2
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the supporting text should not be displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-card mdc-card--global-override material-design-card"
        style="border-radius: 4px;"
      >
        <div
          class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="mdc-card__media mdc-card__media--16-9 material-design-card__media material-design-card-with-text-under-media"
            style="background-image: url(http://test.loc/test.jpg);"
            tabindex="0"
          />
          <div
            class="material-design-card__primary"
          >
            <h2
              class="material-design-card__title title-large"
            >
              Test title
            </h2>
            <h3
              class="material-design-card__secondary-text body-medium"
            >
              Test secondary text
            </h3>
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 1
              </span>
            </a>
            <a
              class="mdc-button mdc-card__action mdc-card__action--button"
              href="http://test.loc/hello-world-again"
              rel="noopener noreferrer nofollow"
              target="_blank"
            >
              <span
                class="mdc-button__label"
              >
                Test button action 2
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override material-design-card"
      style="border-radius: 4px;"
    >
      <div
        class="mdc-card__primary-action material-design-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="mdc-card__media mdc-card__media--16-9 material-design-card__media material-design-card-with-text-under-media"
          style="background-image: url(http://test.loc/test.jpg);"
          tabindex="0"
        />
        <div
          class="material-design-card__primary"
        >
          <h2
            class="material-design-card__title title-large"
          >
            Test title
          </h2>
          <h3
            class="material-design-card__secondary-text body-medium"
          >
            Test secondary text
          </h3>
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 1
            </span>
          </a>
          <a
            class="mdc-button mdc-card__action mdc-card__action--button"
            href="http://test.loc/hello-world-again"
            rel="noopener noreferrer nofollow"
            target="_blank"
          >
            <span
              class="mdc-button__label"
            >
              Test button action 2
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
